# Steel-Defect-Detection-AI-Wind-Turbines-Production-Quality-Inspection

./: .gitignore  README.md  main.py  pyproject.toml  visualize_tiling.py
Inspeccion-Torres-Wind/: requirements.txt
organized_experiments/: requirements.txt
organized_experiments/Unet++EfficienNetB4/: Train_UnetPlusPlus_EfficientNetB4.ipynb
organized_experiments/Unet++Resnet34/: Train_UnetPlusPlus_ResNet34.ipynb
organized_experiments/UnetConvNeXtTiny/: Train_Unet_ConvNeXtTiny.ipynb
organized_experiments/inference/: create_test_video.py  inference_galicia_toshiba.py  interactive_inference.py  predict.py  rt_inference.py
primer entrenamiento colab/NotebookColabEntrenamiento1/: yolov11.ipynb
primer entrenamiento colab/NotebookColabEntrenamiento1/Toshiba_Defects/train_3_clases/: args.yaml  results.csv
primer entrenamiento colab/NotebookColabEntrenamiento1/Toshiba_Defects/train_hires_1024/: args.yaml  results.csv
primer entrenamiento colab/NotebookColabEntrenamiento3/: Advanced_Training_Galicia.ipynb  Severstal_Pretraining_Galicia_Finetuning (1).ipynb
primer entrenamiento colab/ReportFinal081225/: presentation.tex  technical_report.tex
