[project]
name = "steel-defect-detection-ai-wind-turbines-production-quality-inspection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "ultralytics>=8.3.235",
]
